Bug 1126368 - Adjust css to right-align text for RTL when conf plus another call. r=drs.

--- a/apps/callscreen/style/oncall.css
+++ b/apps/callscreen/style/oncall.css
@@ -837,6 +837,11 @@
     padding-right: 3rem;
   }
 
+  html[dir="rtl"] #calls:not(.big-duration) #group-call-label {
+    padding-right: 0;
+    text-align: right;
+  }
+
   #group-call .hangup-button,
   #calls:not(.big-duration) #group-call > .duration.isTimer{
     display: none;
